# depot-boissons

./: .gitignore  Cargo.toml  README.md  build.rs  printer_config.json
migrations/2025-06-22-213540_create_initial_tables/: down.sql  up.sql
src/: auth.rs  change_password.rs  change_password_user.rs  db.rs  error.rs  login.rs  main.rs  models.rs  queries.rs  schema.rs  seed.rs
src/config/: mod.rs  printer_config.rs
src/helpers/: mod.rs  printer_error_handler.rs
src/main_window_manager/: dashboard_callbacks.rs  mod.rs  printer_callbacks.rs  product_callbacks.rs  reporting_callbacks.rs  sale_callbacks.rs  user_callbacks.rs
src/queries/: dashboard_queries.rs  mod.rs  password_queries.rs  product_queries.rs  reporting_queries.rs  sale_queries.rs  user_queries.rs
src/services/: mod.rs  printing_service.rs  report_generator_service.rs
src/ui/: add_user.slint  all_in_one.slint  change_password.slint  change_password_user.slint  login.slint  main.slint  main_window.slint  mod.rs
src/ui/auth_views/: change_password.slint  change_password_user.slint  login.slint
src/ui/components/: button.slint  card.slint  header.slint  menu_item.slint  models.slint  profile.slint  sidebar.slint  user_list.slint
src/ui/dialogs/: add_product_dialog.slint  add_user_dialog.slint  confirm_dialog.slint  delete_product_dialog.slint  delete_user_dialog.slint  edit_product_dialog.slint  edit_user_dialog.slint  error_dialog.slint  import_products_dialog.slint  info_dialog.slint  new_sale_dialog.slint  receipt_dialog.slint  sale_details_dialog.slint
src/ui/theme/: colors.slint
src/ui/views/: products.slint  (+5 more)
(+4 files in other folders)
