[package]
name = "depot-boissons"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bcrypt = "0.17.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = ["postgres", "uuid", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
slint = "1.3"
tokio = { version = "1.45.1", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[build-dependencies]
slint-build = "1.3"
